<resources>
    <string name="app_name">My Calculator</string>
    <string name="app_scheme">scheme</string>
    <string name="app_host">calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="cancel">C</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="result">=</string>
    <string name="minus">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="signe">±</string>
    <string name="settings">settings</string>
    <string name="select_theme">Select app theme:</string>
    <string-array name="theme_array">
        <item>Green</item>
        <item>Orange</item>
        <item>Purple</item>
    </string-array>
</resources>